--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/home">Fantasy Taverns</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/SignUp">Sign Up</a>
+        </li>
       </ul>
     </div>
     <div class="float-right">
