--- a/src/app/common/auth/signUp/SignUp.component.html
+++ b/src/app/common/auth/signUp/SignUp.component.html
@@ -12,12 +12,14 @@
   <br />
   <div class="row">
     <div class="col-md-6">
-      <button type="submit" class="btn btn-primary" (click)="login()">
+      <button type="submit" class="btn btn-primary" (click)="signUp()">
         Submit
       </button>
     </div>
     <div class="col-md-6">
-      <a class="nav-link" routerLink="/login">Cancel</a>
+      <button class="btn btn-primary" routerLink="/login">
+        Cancel
+      </button>
     </div>
   </div>
 </form>
