--- a/src/app/common/auth/signUp/SignUp.component.html
+++ b/src/app/common/auth/signUp/SignUp.component.html
@@ -29,7 +29,7 @@
         <div *ngIf="role === 'Manager'">
           <label>Select Your Tavern</label>
           <select class="form-control" [(ngModel)]="selectTavern" name="selectTavern">
-              <option *ngFor="let tavern of taverns" [ngValue]="tavern">{{tavern.tavernName}}</option>
+              <option *ngFor="let tavern of taverns" [ngValue]="tavern">{{tavern.TavernName}}</option>
           </select>   
         </div>
 
