--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/home">Fantasy Taverns</a>
+          <a class="nav-link" routerLink="/taverns">Fantasy Taverns</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/SignUp">Sign Up</a>
