InsertRooms second try commit 1

--- a/src/app/common/taverns/my-taverns/my-taverns.component.html
+++ b/src/app/common/taverns/my-taverns/my-taverns.component.html
@@ -8,3 +8,6 @@
     <ul>
          <option *ngFor = "let rooms of tavernRooms">{{rooms.RoomName}}</option>
     </ul>
+    <div>
+      <button type="submit" class="btn btn-primary" routerLink="/taverns/insert-rooms">Insert Rooms</button>
+    </div>
